# Sandbox

./: .gitattributes  .gitignore  BatchExport.sh  CMakeLists.txt  GunnerBoi.sln  MeshExporter.sh  README.md  Sandbox.sln  Sandbox.sln.DotSettings  vcpkg.json
.github/workflows/: release.yml
Code/Foundation/: Config.h  Foundation.vcxproj  Foundation.vcxproj.filters  Libraries.h  Precompiled.h
Code/Foundation/App/: Application.cpp  Application.h  RenderApplication.cpp  RenderApplication.h
Code/Foundation/Core/: Debug.cpp  Debug.h  Exception.cpp  Exception.h  Singleton.h  Types.h
Code/Foundation/Core/Exception/: IOException.cpp  IOException.h  ParsingException.cpp  ParsingException.h  UnsupportedException.cpp  UnsupportedException.h
Code/Foundation/Game/: Camera.h  Entity.h  Light.h  Scene.cpp  Scene.h  TargetedCamera.h
Code/Foundation/Game/Attributes/: HasPosition.cpp  HasPosition.h  HasPosition2D.cpp  HasPosition2D.h  HasPosition3D.cpp  HasPosition3D.h  HasRotation.cpp  HasRotation.h  HasRotation2D.cpp  HasRotation2D.h  HasRotation3D.cpp  HasRotation3D.h  HasScale.cpp  HasScale.h
Code/Foundation/Game/Scene/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Entity.cpp  Entity.h  Light.cpp  Light.h  PointLight.h  (+11 more)
Code/Foundation/Graphics/: Buffer.cpp  Buffer.h  Core.cpp  Core.h  Font.cpp  Font.h  FontType.cpp  FontType.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsUtils.cpp  GraphicsUtils.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Projection.cpp  Projection.h  RenderBuffer.cpp  RenderBuffer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShadowFrameBuffer.cpp  ShadowFrameBuffer.h  Text.cpp  Text.h  TextType.cpp  TextType.h  Texture.cpp  Texture.h  TexturedMesh.cpp  TexturedMesh.h  VertexArray.cpp  VertexArray.h  (+4 more)
Code/Foundation/IO/: Console.cpp  Console.h  InputFile.cpp  InputFile.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  OutputFile.cpp  OutputFile.h
Code/Foundation/Math/: Constants.h  MathUtils.cpp  MathUtils.h  MathUtils2D.cpp  MathUtils2D.h  MathUtils3D.cpp  MathUtils3D.h  Matrix.h  Quaternion.h  Utils.cpp  Utils.h  Vector.h
Code/Foundation/Timing/: Time.cpp  Time.h
Code/Foundation/Util/: FourCC.cpp  FourCC.h  Random.cpp  Random.h  ResourcesLoader.cpp  ResourcesLoader.h  String.cpp  String.h  YAMLParser.cpp  YAMLParser.h
Code/GunnerBoiClient/: GunnerBoiClient.cpp  GunnerBoiClient.vcxproj  GunnerBoiClient.vcxproj.filters
Code/GunnerBoiClient/App/: GunnerBoiApplication.cpp  GunnerBoiApplication.h
Code/GunnerBoiClient/Game/: GunnerBoiScene.cpp  GunnerBoiScene.h
Code/GunnerBoiClient/Managers/: ProjectileManager.cpp  ProjectileManager.h
Code/MeshExporter/: MeshExporter.cpp  MeshExporter.vcxproj  MeshExporter.vcxproj.filters
Code/MeshExporter/App/: MeshExporterApplication.cpp  MeshExporterApplication.h
Code/MeshExporter/Exporters/: AssimpExporter.cpp  AssimpExporter.h
Code/SandboxClient/: SandboxClient.cpp  SandboxClient.vcxproj  SandboxClient.vcxproj.filters
Code/SandboxClient/App/: SandboxApplication.cpp  SandboxApplication.h
Code/SandboxClient/Game/: SandboxScene.cpp  SandboxScene.h
Code/Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters
Code/Test/App/: TestApplication.cpp  TestApplication.h
Code/Test/Game/: TestScene.cpp  TestScene.h
Resources/Fonts/: tahoma.fnt
Resources/Models/: anvil.fbx  anvil.model  arrow.fbx  arrow.model  beach_ball.model  board.model  boat.model  brick_wall.fbx  brick_wall.model  bricks.model  bridge.fbx  bridge.model  crate.fbx  crate.model  drum_radioactive.model  drum_shell.model  duck.model  dummy.model  hardcoded.fbx  hardcoded.model  house.model  mat_alpha.model  mat_leather.model  mat_metal.model  mat_sponge.model  mat_tiles.model  palm.model  palm2.model  pier.model  pier_modular.model  projectile.fbx  projectile.model  rock.fbx  rock.model  sphere.fbx  sphere.model  terrain.fbx  terrain.model  tile.model  water.fbx  (+2 more)
Resources/Prefabs/: test.yaml
Resources/Scenes/: default.yaml
Resources/Shaders/Depth/: Depth.frag  Depth.vert
Resources/Shaders/Entity/: Entity.frag  Entity.vert
Resources/Shaders/Glyph/: Glyph.frag  Glyph.vert
Resources/Shaders/HUD/: HUD.frag  HUD.vert
Resources/Shaders/Skybox/: Skybox.frag  Skybox.vert
Resources/Shaders/Text/: Text.frag
Resources/Shaders/UI/: UI.frag  UI.vert
Resources/Shaders/Water/: Water.frag  Water.vert
Resources/Textures/: alpha.dds  alpha_n.dds  arrow.dds  beach_ball.dds  boat_wood_01.dds  boat_wood_01_n.dds  boat_wood_02_n.dds  boat_wood_03_s.dds  brick_wall.dds  brick_wall_n.dds  chinchillen.dds  crate.dds  crate_n.dds  day_c.dds  default.dds  drum_radioactive.dds  drum_radioactive_n.dds  drum_shell.dds  drum_shell_n.dds  duck.dds  dummy.dds  house.dds  house_n.dds  leather.dds  leather_n.dds  leather_s.dds  metal.dds  metal_n.dds  metal_s.dds  palm.dds  projectile.dds  projectile_n.dds  rock.dds  rock_d.dds  rock_n.dds  sand.dds  sand_d.dds  sand_n.dds  sand_s.dds  sponge.dds  (+12 more)
Resources/Textures/Fonts/: tahoma.dds
Resources/Textures/Skybox/: day_back.dds  day_bottom.dds  day_front.dds  day_left.dds  day_right.dds  day_top.dds
Work/Fonts/: tahoma.hiero
Work/Models/: .gitignore  anvil.blend  arrow.blend  beach_ball.blend  board.blend  boat.blend  brick_wall.blend  bridge.blend  crate.blend  cube.blend  drum_radioactive.blend  drum_shell.blend  duck.blend  dummy.blend  hardcoded.blend  house.blend  mat_alpha.blend  mat_leather.blend  mat_metal.blend  mat_sponge.blend  mat_tiles.blend  palm.blend  palm2.blend  pier.blend  pier_modular.blend  projectile.blend  rock.blend  sphere.blend  terrain - Copy.blend  terrain.blend  water.blend  water_crate.blend  wine_glass.blend
Work/Textures/: alpha.psd  arrow.psd  beach_ball.psd  boat_wood_01.psd  boat_wood_02.psd  boat_wood_03.psd  chinchillen.psd  crate.psd  cubemap_day.psd  default.psd  drum_radioactive.psd  drum_shell.psd  duck.psd  font_tahoma.psd  house.psd  leather.psd  metal.psd  palm.psd  sponge.psd  terrain_rock_01.psd  tiles.psd  water.psd  water_dudv.psd
Work/Textures/Fonts/: tahoma.psd
(+120 files in other folders)
